--- a/style.css
+++ b/style.css
@@ -132,3 +132,11 @@ li {
     "victor";
   align-content: center;
 }
+.main-body {
+  margin: auto;
+  text-align: center;
+}
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
