--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@ li {
   text-align: center;
 }
 .container {
+  /* display: flex;
+  flex-direction: column; */
   display: grid;
   grid-template-areas:
     "header"
