--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   --clr-primary: #01209f;
   --clr-midtone: #9c31c7;
   --clr-darktone: ;
-  --clr-contrast1: ;
+  --clr-contrast1: rgb(233, 230, 230);
   --clr-contrast2: ;
   --ff-primary: "Roboto", sans-serif;
   --ff-accent: "DotGothic16", sans-serif;
@@ -17,64 +17,201 @@
   margin: 0;
   padding: 0;
 }
+*:hover {
+  outline: 1px solid red;
+}
 body {
+  color: var(--clr-contrast1);
   font-family: sans-serif;
-
+  /* background-image: url("images/Fortnite-Sarah-Connor-T-800-Terminator-1024x616.jpg"); */
+  /* background-size: cover; */
   background-image: linear-gradient(to left, #e6e5e7, #bebcc2, #e6e5e7);
 }
-li {
-  list-style-type: none;
-  padding: 0 2rem;
+.container {
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+}
+nav {
+  /* position: relative; */
+  display: flex;
+  justify-content: space-between;
+  background-image: linear-gradient(to left, #01209f, black);
+  padding: 10px;
+  background-color: red;
+}
+.app-title {
+  font-size: 1.5rem;
+  /* background-color: black; */
+}
+#rules-btn {
+  color: var(--clr-contrast1);
+  /* background-color: black; */
+  /* position: absolute; */
+  z-index: 500;
+  /* top: 400px; */
+  /* right: 0px; */
+  cursor: pointer;
+  /* font-family: var(--ff-primary); */
+  /* font-weight: 900; */
+  font-size: 1.5rem;
+}
+#rules-btn:hover {
+  color: gold;
+}
+#rules {
+  z-index: 1000;
+  background-color: black;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 300px;
+  padding: 10px;
+  /* opacity: 0; */
+  transition: all 0.25s ease-in-out;
+  font-size: 1.1rem;
+  /* using diplay: none so it doesn't interfere with other element hover effects */
+  display: none;
+}
+#rules-title {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
+  color: gold;
+}
+
+main {
+  min-height: 100vh;
 }
 .header {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
   font-family: var(--ff-accent2);
   background-image: linear-gradient(to left, #01209f, black);
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-area: header;
 }
-.title {
-  /* display: flex;
+.game {
+  align-self: center;
+  /* background-color: red; */
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; */
-  text-align: center;
-  height: 100%;
-  /* justify-content: center;
-  align-items: center; */
-  grid-area: title;
-  color: white;
-  /* width: 100%; */
-}
-.title > h2 {
-  font-size: 2rem;
-  padding-top: 1rem;
-}
-.title > h1 {
-  font-size: 3rem;
-}
-.title > p {
-  font-family: var(--ff-primary);
-  font-size: 1.6rem;
-  padding: 1rem;
-  text-align: center;
+  align-items: center;
+  /* text-align: center; */
+  width: 100%;
+  /* height: 100%; */
+  color: var(--clr-contrast1);
 }
 
 .header-img {
-  float: right;
+  /* float: right; */
   margin-left: 1rem;
-  width: 500px;
+  /* width: 500px; */
 }
 
-.rps {
+.choices {
+  /* background-color: blue; */
+  font-family: var(--ff-accent);
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+
+  padding: 0 1rem 1rem 1rem;
+  text-align: center;
+}
+.choice-mobile {
+  /* background-color: black; */
+  /* width: 50%; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.player-choice,
+.term-choice {
+  width: 8rem;
+}
+/* .choices > div {
+  padding: 0 1rem;
+} */
+#term-avatar,
+#sarah-avatar {
+  border-radius: 50%;
+  border: 2px solid var(--clr-contrast1);
+  margin-right: 10px;
+}
+
+.winner {
+  /* background-color: #fff; */
+  height: 2rem;
+  font-size: 1.5rem;
+  color: red;
+  text-align: center;
+  /* padding: 1rem; */
+  margin: 1rem 0;
+}
+
+.score-row {
+  font-size: 1.5rem;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* text-align: center; */
+  padding: 1rem;
+}
+.score {
+  display: flex;
+}
+#pscore,
+#cscore {
+  padding: 0 10px;
+}
+.inst {
+  font-size: 1.5rem;
+  color: purple;
+  text-align: center;
+}
+.victor {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: red;
+  font-size: 3rem;
+  align-self: center;
+  margin-top: 3rem;
+  display: none;
+}
+#playAgainBtn {
+  color: var(--clr-contrast1);
+  margin-top: 2rem;
+  font-size: 1.5rem;
+  /* width: 5rem; */
+  padding: 5px 20px;
+  background-image: linear-gradient(to left, #01209f, black);
+  /* border: 1px solid black; */
+  border-radius: 18px;
+  text-align: center;
+  transition: all ease-in-out 0.2s;
+}
+#playAgainBtn:hover {
+  transform: scale(1.05);
+}
+#playAgainBtn:active {
+  transform: scale(0.9);
+}
+/* .hidden {
+  visibility: hidden;
+  height: 0;
+} */
+#rps {
   text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 2rem 0;
-  grid-area: rps;
 }
 .rock,
 .paper,
@@ -82,93 +219,16 @@ li {
   /* background-color: blue; */
   padding: 0 3rem;
 }
-.rps img {
+#rps img {
   border-radius: 50px;
   transition: 0.2s ease-in-out;
 }
-.rps img:hover {
+#rps img:hover {
   transform: scale(1.2, 1.2);
   box-shadow: 0px 0px 30px var(--clr-midtone);
 }
-.rps img:active {
+#rps img:active {
   box-shadow: 0px 0px 30px white;
-}
-.choices {
-  font-family: var(--ff-accent);
-  font-size: 1.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 1rem 1rem 1rem;
-  text-align: center;
-  grid-area: choices;
-}
-.choice-mobile {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.choices > div {
-  padding: 0 1rem;
-}
-#term-avatar {
-  border-radius: 50%;
-  margin-left: 3rem;
-  border: 2px solid white;
-  margin-right: 10px;
-}
-#sarah-avatar {
-  border-radius: 50%;
-  border: 2px solid black;
-  margin-right: 10px;
-}
-.choice-mobile > span {
-  margin-right: 1rem;
-  color: var(--clr-primary);
-}
-.winner {
-  font-size: 1.5rem;
-  color: red;
-  text-align: center;
-  grid-area: winner;
-  padding: 1rem;
-}
-.score {
-  font-size: 1.5rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  grid-area: score;
-  padding: 1rem;
-}
-.victor {
-  font-size: 1.5rem;
-  color: purple;
-  grid-area: victor;
-  text-align: center;
-}
-.container {
-  /* display: flex;
-  flex-direction: column; */
-  display: grid;
-  grid-template-areas:
-    "header"
-    "rps"
-    "choices"
-    "winner"
-    "score"
-    "victor";
-  align-content: center;
-}
-.main-body {
-  margin: auto;
-  text-align: center;
-}
-.hidden {
-  visibility: hidden;
-  height: 0;
 }
 /* footer start */
 footer {
@@ -217,10 +277,6 @@ footer img:hover {
 /* footer end */
 
 @media screen and (max-width: 800px) {
-  .title > p {
-    font-size: 1rem;
-  }
-
   .header-img {
     float: right;
     margin: 0;
@@ -232,12 +288,12 @@ footer img:hover {
     /* background-color: blue; */
     padding: 0 1rem;
   }
-  .rps img {
+  #rps img {
     width: 75px;
     border-radius: 10px;
   }
   /* .choices, */
-  .score {
+  .score-row {
     flex-direction: column;
   }
   #term-avatar,
